# portfolio-intelligence-platform

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_document_chunks.py  0003_market_price_snapshots.py  0004_recommendation_outcomes.py
configs/: dev.yaml  local.yaml  prod.yaml
data/processed/: finance_lm.db.pre_alembic.bak
docs/plans/: current-status-and-next-steps.md  implementation-backlog.md  phased-development-plan.md
scripts/: seed_db.py
src/api/: main.py
src/common/: bootstrap.py  db.py  errors.py  logging.py  observability.py  settings.py
src/core/: __init__.py  models.py  recommendation_outcomes.py
src/data_ingestion/connectors/: __init__.py  market_data.py
src/data_ingestion/pipelines/: document_ingestion.py  jobs.py  market_snapshots.py  scheduler.py
src/data_ingestion/schemas/: __init__.py  documents.py
src/rag/: __init__.py  answer_generation.py  chunking.py  chunking_benchmark.py  embeddings.py  evaluation.py  qa.py  retrieval.py
src/signals/: __init__.py  sentiment.py  sentiment_scoring.py
tests/integration/: test_api.py  test_market_snapshots.py  test_retrieval.py  test_scheduler.py
tests/unit/: test_chunking.py  test_chunking_benchmark.py  test_qa_generation.py  test_recommendation_outcomes.py  test_sentiment_scoring.py  test_settings.py
