[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-lm"
version = "0.1.0"
description = "AI-assisted stock portfolio and trading backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "numpy>=2.0.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "pandas>=2.2.0",
  "prometheus-client>=0.21.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
